Add calculator html structure

--- a/index.html
+++ b/index.html
@@ -8,6 +8,45 @@
         <title>JS Calculator</title>
     </head>
     <body>
-        
+        <div class='container'>
+            <h1>Javascript Calculator</h1>
+
+            <div class="calculator body">
+                <div class="calculator screen">
+                    <span class="number operation">4 + 15</span>
+                    <span class="number result">19</span>
+                </div>
+
+                <div class="calculator buttons">
+                    <div class="calculator buttons control">
+                        <button class="button control">Clear</button>
+                        <button class="button control">Delete</button>
+                    </div>
+                    <div class="calculator buttons operation">
+                        <button class="button">7</button>
+                        <button class="button">8</button>
+                        <button class="button">9</button>
+                        <button class="button">/</button>  
+                        <button class="button">4</button>
+                        <button class="button">5</button>
+                        <button class="button">6</button>
+                        <button class="button">*</button>
+                        <button class="button">1</button>
+                        <button class="button">2</button>
+                        <button class="button">3</button>
+                        <button class="button">-</button>
+                        <button class="button">0</button>
+                        <button class="button">.</button>
+                        <button class="button">+</button>
+                        <button class="button">=</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <span class="footertext">Made by Giorgi Chanturia. Source code on 
+                <a class="footertext link" href="https://github.com/Chantuu/odin-calculator">Github</a></span>
+        </div>
     </body>
 </html>
