Remove placeholder values

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
             <div class="calculator body">
                 <div class="calculator screen">
-                    <span class="number operation">4 + 15</span>
-                    <span class="number result">19</span>
+                    <span class="number operation"></span>
+                    <span class="number result"></span>
                 </div>
 
                 <div class="calculator buttons">
