--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
             <div class="calculator body">
                 <div class="calculator screen">
-                    <span class="number operation"></span>
+                    <div>
+                        <span class="number operation first"></span>
+                        <span class="number operation second"></span>
+                        <span class="number operation third"></span>
+                        
+                    </div>
                     <span class="number result"></span>
                 </div>
 
